# snakeer

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
api/: download.js  upload.js
functions/: download.js  upload.js
snakeer/: __init__.py  cli.py  config.py  installer.py  loader.py  utils.py
